fix autologin and behind proxy login
