# CheckCheck/openapi.json
@@ -2,7 +2,7 @@
   "openapi": "3.1.0",
   "info": {
     "title": "CheckCheck REST API",
-    "version": "0.0.4.dev1+gd7c997eb9.d20260715"
+    "version": "0.0.6.dev1+gf646bc6.d20260715"
   },
   "paths": {
     "/api/health": {
@@ -5408,6 +5408,11 @@
               }
             ],
             "title": "Provider Slug"
+          },
+          "auto_login": {
+            "type": "boolean",
+            "title": "Auto Login",
+            "default": false
           }
         },
         "type": "object",
